--- a/aboutpage.html
+++ b/aboutpage.html
@@ -19,7 +19,7 @@
             
             min-height: 100vh;
             background-image: linear-gradient(rgba(52, 53, 39, 0.3),
-             rgba(7, 9, 15, 0.5)), url(imagesfile/Bagan.jpg);
+             rgba(7, 9, 15, 0.5)), url(imagesfile/BaganOptimisedd.jpg);
             background-size: cover;
             background-position: center;
             position: relative;
@@ -32,7 +32,7 @@
 
     <body>
 
- <div class="navdiv" data-aos="fade-down" data-aos-duration="3000">
+ <div class="navdiv" data-aos="fade-down" data-aos-duration="2000">
                 <div class="logo"><a href="index.html"><h1>VOYAGE</h1></a></div>
                 
                  <nav>
@@ -66,8 +66,8 @@
 
 <div class="header">
             <div class="about-this-page-header">
-            <h1 data-aos="fade-up" data-aos-duration="3000">ABOUT THIS SITE</h1>
-            <p data-aos="fade-up" data-aos-duration="3000">
+            <h1 data-aos="fade-up" data-aos-duration="2000">ABOUT THIS SITE</h1>
+            <p data-aos="fade-up" data-aos-duration="2000">
        This site was developed to showcase the beauty, culture, and history of Bagan, Myanmar. 
        Our goal is to help you experience the charm of this ancient city through inspiring stories, photographs, travel tips, 
        and Burmese culture. Whether you are planning a visit or are simply curious about this ancient city, 
@@ -94,14 +94,13 @@
     </div>
   </div>
 
-  <div class="icons emailIcon">
-    <p class="iconName">Email</p>
-    <div class="icon email">
-      <a href="mailto:pch22008@my.hghs.school.nz">
-        <i class="fa-solid fa-envelope"></i>
-      </a>
-    </div>
-  </div>
+        <div class="icons youtubeIcon">
+        <p class="iconName">Youtube</p>
+        <div class="icon youtube">
+          <a href="https://www.youtube.com/@draw.3r" target="_blank"></a>
+          <i class="fa-brands fa-youtube"></i>
+        </div>
+      </div>
 </div>
         </div>
 
