--- a/culturepage.html
+++ b/culturepage.html
@@ -19,7 +19,7 @@
             
             min-height: 100vh;
             background-image: linear-gradient(rgba(52, 53, 39, 0.3),
-             rgba(7, 9, 15, 0.5)), url(imagesfile/puppets.jpg);
+             rgba(7, 9, 15, 0.5)), url(optimisedimages/puppets.jpg);
             background-size: cover;
             background-position: center;
             position: relative;
@@ -83,9 +83,9 @@
 
   <div class="festival-gallery">
   <div class="festival-card">
-    <img src="imagesfile/Lighting_Festival.jpg" alt="Rows of candles are lit to celebrate the Thadingyut Lighting Festival, marking the end of Buddhist Lent.">
+    <img src="optimisedimages/Lighting_Festival-min.jpg" alt="Rows of candles are lit to celebrate the Thadingyut Lighting Festival, marking the end of Buddhist Lent.">
     <p class="image-credit">Rows of candles are lit to celebrate the Thadingyut Lighting Festival, marking the end of Buddhist Lent <br>
-      <span class="credit">By Aung Myint Htwe - Own work <a href="https://commons.wikimedia.org/w/index.php?curid=72920218">On Wikimedia Commons</a></span>
+      <span class="credit">By Aung Myint Htwe - Own work <a href="https://commons.wikimedia.org/w/index.php?curid=72920218" target="_blank">On Wikimedia Commons</a></span>
     </p>
     <h3>Lighting Festival</h3>
     <p>The Lighting Festival is called Thadingyut in Burmese. 
@@ -99,9 +99,9 @@
 
 
   <div class="festival-card">
-    <img src="imagesfile/monk.jpg" alt="Monks and novices line up to receive alms during the annual Shwezigon Pagoda Festival">
+    <img src="optimisedimages/monk.jpg" alt="Monks and novices line up to receive alms during the annual Shwezigon Pagoda Festival">
     <p class="image-credit">Monks and novices line up to receive alms during the annual Shwezigon Pagoda Festival<br>
-      <span class="credit">By Dan Lundberg - Own work <a href="https://www.flickr.com/photos/9508280@N07/">On Flickr</a></span>
+      <span class="credit">By Dan Lundberg - Own work <a href="https://www.flickr.com/photos/9508280@N07/" target="_blank">On Flickr</a></span>
     </p>
     <h3>SHWEZIGON FESTIVAL</h3>
     <p>The Shwezigon Festival is a yearly festival celebrated on the full moon day of Tazaungmone (in November).
@@ -116,9 +116,9 @@
   </div>
 
   <div class="festival-card">
-    <img src="imagesfile/Rakhine_Thingyan_2011.jpeg" alt="Locals celebrate the Burmese New Year by sprinkling water on each other">
+    <img src="optimisedimages/Rakhine_Thingyan_2011.jpeg" alt="Locals celebrate the Burmese New Year by sprinkling water on each other">
     <p class="image-credit">Locals celebrate the Burmese New Year by sprinkling water on each other<br>
-      <span class="credit">By Htoo Tay Zar  - Own work <a href="https://commons.wikimedia.org/w/index.php?curid=19503095">On Wikimedia Commons</a></span>
+      <span class="credit">By Htoo Tay Zar  - Own work <a href="https://commons.wikimedia.org/w/index.php?curid=19503095" target="_blank">On Wikimedia Commons</a></span>
     </p>
     <h3>WATER FESTIVAL</h3>
     <p>The Water Festival, also known as Thingyan, is a 4–5 day celebration of the Burmese New Year.
@@ -161,21 +161,21 @@
 
   <div class="cultural-gallery">
     <div class="cultural-card">
-      <img src="imagesfile/myanmar-4123323_1280.jpg" alt="Woman with Thanaka">
+      <img src="optimisedimages/myanmar-4123323_1280.jpg" alt="Woman with Thanaka">
       <p class="image-credit">Woman with Thanaka<br>
-      <span class="credit">By Qamera - Own work <a href="https://pixabay.com/photos/myanmar-temple-pagoda-burma-4123323/">On Pixabay</a></span>
+      <span class="credit">By Qamera - Own work <a href="https://pixabay.com/photos/myanmar-temple-pagoda-burma-4123323/" target="_blank">On Pixabay</a></span>
     </p>
     </div>
     <div class="cultural-card">
-      <img src="imagesfile/Taking_off_shoes.jpg" alt="Remove Shoes Sign At The Entry Of Temple">
+      <img src="optimisedimages/Taking_off_shoes.jpg" alt="Remove Shoes Sign At The Entry Of Temple">
       <p class="image-credit">Remove Shoes Sign At The Entry Of Temple<br>
-      <span class="credit">By Wally Gobetz - Own work <a href="https://www.flickr.com/photos/wallyg/4757205464">On Flickr</a></span>
+      <span class="credit">By Wally Gobetz - Own work <a href="https://www.flickr.com/photos/wallyg/4757205464" target="_blank">On Flickr</a></span>
     </p>
     </div>
     <div class="cultural-card">
-      <img src="imagesfile/Pickled_tea_(lahpet).jpg" alt=" Ingredients for Myanmar’s famous Tea Leaf Salad (Lahpet Thoke), a traditional cultural dish.">
+      <img src="optimisedimages/Pickled_tea_(lahpet).jpg" alt=" Ingredients for Myanmar’s famous Tea Leaf Salad (Lahpet Thoke), a traditional cultural dish.">
       <p class="image-credit"> Ingredients for Myanmar’s famous Tea Leaf Salad (Lahpet Thoke)<br>
-      <span class="credit">By Wagaung at the English Wikipedia - Own work <a href="https://commons.wikimedia.org/wiki/File:Pickled_tea_(lahpet).JPG">On Wikimedia Commons</a></span>
+      <span class="credit">By Wagaung at the English Wikipedia - Own work <a href="https://commons.wikimedia.org/wiki/File:Pickled_tea_(lahpet).JPG" target="_blank">On Wikimedia Commons</a></span>
     </p>
     </div>
   </div>
@@ -233,10 +233,10 @@ It is believed that the foot is the most impure part of the body.
 </section>
 
 <!-- footer content -->
-<footer data-aos="fade-up" data-aos-duration="3000">
+<footer>
   <div class="footer-overlay">
 
-<div class="row">
+<div class="row" data-aos="zoom-in-up" data-aos-duration="1000" >
     <div class="col">
         <div class="logo" ><a href="homepage.html"><h1>VOYAGE</h1></a></div>
         <p>Voyage is dedicated to sharing the beauty, history, and culture of Bagan, Myanmar. 
@@ -244,13 +244,13 @@ It is believed that the foot is the most impure part of the body.
           and travel tips to make the most of your visit</p>
     </div>
     <div class="col">
-        <h2 data-aos="zoom-in" data-aos-duration="5000">Resources <div class="underline"><span></span></div></h2>
+        <h2>Resources <div class="underline"><span></span></div></h2>
     <div class="subcol">
         <uL>
-            <li><a href="#">UNESCO </a></li>
-            <li><a href="aboutpage.html">Britsh Museum</a></li>
-            <li><a href="historypage.html">InsideAsia</a></li>
-            <li><a href="culturepage.html">GoMyanmarTours</a></li>
+            <li><a href="https://whc.unesco.org/en/list/1588/" target="_blank">UNESCO </a></li>
+            <li><a href="https://www.britishmuseum.org/exhibitions/burma-myanmar/myanmars-many-cultures-timeline" target="_blank">Britsh Museum</a></li>
+            <li><a href="https://www.insideasiatours.com/blog/bagan-our-guide-to-burmas-archaeological-wonders#:~:text=Bagan%20was%20the%20capital%20city,height%20there%20were%20over%2010%2C000." target="_blank">InsideAsia</a></li>
+            <li><a href="chttps://www.gomyanmartours.com/art-architecture-bagan/#google_vignette"  target="_blank">GoMyanmarTours</a></li>
 
         </uL>
     </div>
@@ -260,7 +260,7 @@ It is believed that the foot is the most impure part of the body.
         <h2 >Explore <div class="underline"><span></span></div></h2>
         <div class="subcol" >
         <uL>
-            <li><a href="homepage.html">Discover Bagan</a></li>
+            <li><a href="index.html">Discover Bagan</a></li>
             <li><a href="aboutpage.html">About Us</a></li>
             <li><a href="historypage.html">History Of Bagan</a></li>
             <li><a href="culturepage.html">Culture Of Bagan</a></li>
@@ -293,11 +293,11 @@ It is believed that the foot is the most impure part of the body.
         </div>
       </div>
 
-        <div class="icons emailIcon">
-        <p class="iconName">Email</p>
-        <div class="icon email">
-          <a href="mailto:pch22008@my.hghs.school.nz"></a>
-          <i class="fa-solid fa-envelope"></i>
+        <div class="icons youtubeIcon">
+        <p class="iconName">Youtube</p>
+        <div class="icon youtube">
+          <a href="https://www.youtube.com/@draw.3r" target="_blank"></a>
+          <i class="fa-brands fa-youtube"></i>
         </div>
       </div>
 
