--- a/templepage.html
+++ b/templepage.html
@@ -93,7 +93,7 @@
 
         <!-- TEMPLE PAGE CONTENT -->
 
-<section class="temple-section" data-aos="fade-up-left" data-aos-duration="2000">
+<section class="temple-section">
 
     <h1>Architecture of Bagan</h1>
     <p class="subheading">n insight into the unique styles and influences behind Bagan’s ancient architecture.</p>
@@ -148,7 +148,7 @@ which influences the Burmese culture nowadays.  The introduction of Buddhism and
     <h2>Gu Style Temples</h2>
     <p class="subheading">AKA hollow temples</p>
 
-<div class="temple-gallery" data-aos="fade-up-right" data-aos-duration="2000">
+<div class="temple-gallery">
   <div class="temple-card">
     <img src="optimisedimages/Ananda_temple_interior.jpg" alt="Interior details of Ananda temple in Bagan, Myanmar. Frescoes of Buddha from birth to death depicted in the passage of the temple">
     <p class="image-credit">Interior details of Ananda temple in Bagan, Myanmar. Frescoes of Buddha from birth to death depicted in the passage of the temple<br>
@@ -186,7 +186,7 @@ which influences the Burmese culture nowadays.  The introduction of Buddhism and
     <h2>Stupa Temples</h2>
     <p class="subheading">AKA Solid Temples</p>
 
-<div class="temple-gallery" data-aos="fade-up" data-aos-duration="2000">
+<div class="temple-gallery">
   <div class="temple-card">
     <img src="optimisedimages/Lawkananda_Pagoda,_Sittwe.jpg" alt="Lawkananda Pagoda">
     <p class="image-credit">Lawkananda Pagoda<br>
