--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <link rel="stylesheet" href="style.css">
         <script src="https://kit.fontawesome.com/abd7cf25bc.js" crossorigin="anonymous"></script>
         <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Lato&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+        <link rel="stylesheet" href="https://unpkg.com/aos@2.3.4/dist/aos.css">
 
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=arrow_forward" />
 
@@ -44,7 +44,7 @@
     <body>
 
 <!-- Navigation bar -->
-             <div class="navdiv" data-aos="fade-down" data-aos-duration="2000">
+             <div class="navdiv" data-aos="fade-up" data-aos-duration="2000">
                 <div class="logo"><a href="index.html"><h1>VOYAGE</h1></a></div>
                 
                  <nav>
@@ -87,7 +87,7 @@
 
 <!-- about heading with image and text on side -->
         <section class="homepage-about">
-<div class="homepage-about-left"data-aos="fade-up" data-aos-duration="3000"></divclass>
+<div class="homepage-about-left"data-aos="fade-up" data-aos-duration="3000">
         <div  class="homepage-about-text">
             <h2>TIME LESS BEAUTY OF BAGAN</h2>
             <p class="subheading">An insight into the incredible experience in the world</p>
@@ -245,10 +245,10 @@
     </footer>
     
     <!-- Animation script -->
-      <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
-  <script>
-    AOS.init();
-  </script>
+<script src="https://unpkg.com/aos@2.3.4/dist/aos.js"></script>
+<script>
+  AOS.init();
+</script>
 
 
 
