--- a/travelpage.html
+++ b/travelpage.html
@@ -4,7 +4,7 @@
         <link rel="stylesheet" href="style.css">
         <script src="https://kit.fontawesome.com/abd7cf25bc.js" crossorigin="anonymous"></script>
         <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Lato&display=swap" rel="stylesheet">
-          <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+        <link rel="stylesheet" href="https://unpkg.com/aos@2.3.4/dist/aos.css">
 
 
         <meta charset="UTF-8">
@@ -259,7 +259,8 @@
     </footer>
     
     <!-- Animation script -->
-      <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+<script src="https://unpkg.com/aos@2.3.4/dist/aos.js"></script>
+
   <script>
     AOS.init();
   </script>
