--- a/historypage.html
+++ b/historypage.html
@@ -9,7 +9,7 @@
 
         <meta charset="UTF-8">
         <meta name="viewport"
-        content="width=device-width, initial -scale =1.0">
+        content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <title>Discover Bagan</title>
 
@@ -39,25 +39,18 @@
         <div class="navdiv" data-aos="fade-down" data-aos-duration="2000">
                 <div class="logo"><a href="index.html"><h1>VOYAGE</h1></a></div>
                 
-                 <nav>
-                <ul class="sidebar">
-                  <li onclick=hideSidebar()><a href="#"><svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#e3e3e3"><path d="m256-200-56-56 224-224-224-224 56-56 224 224 224-224 56 56-224 224 224 224-56 56-224-224-224 224Z"/></svg></a></li>
-                    <li><a href="aboutpage.html">About</a></li>
-                    <li><a href="historypage.html">History</a></li>
-                    <li><a href="culturepage.html">Culture</a></li>
-                    <li><a href="templepage.html">Temple</a></li>
-                    <li><a href="travelpage.html">Travel</a></li>
-                </ul>
-                <ul>
-                    <li class="hideOnMobile"><a href="aboutpage.html">About</a></li>
-                    <li class="hideOnMobile"><a href="historypage.html">History</a></li>
-                    <li class="hideOnMobile"><a href="culturepage.html">Culture</a></li>
-                    <li class="hideOnMobile"><a href="templepage.html">Temple</a></li>
-                    <li class="hideOnMobile"><a href="travelpage.html">Travel</a></li>
-                    <li class="menu-button" onclick=showSidebar()><a href="#"><svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#e3e3e3"><path d="M120-240v-80h720v80H120Zm0-200v-80h720v80H120Zm0-200v-80h720v80H120Z"/></svg></a></li>
-                </ul>
-
-              </nav>
+                <nav>
+                  <button class="my-button" id="my-button">
+                      <i class="fas fa-bars"></i>
+                  </button>
+                      <ul id="mynav">
+                        <li><a href="aboutpage.html">About</a></li>
+                        <li><a href="historypage.html">History</a></li>
+                        <li><a href="culturepage.html">Culture</a></li>
+                        <li><a href="templepage.html">Temple</a></li>
+                        <li><a href="travelpage.html">Travel</a></li>
+                      </ul>
+                  </nav>
 
 
 <!-- Dark/Light Mode Toggle -->
@@ -293,13 +286,12 @@ An early, significant Buddhist empire's level of religious commitment is reflect
     }
   });
 </script>
-<script>
-  function showSidebar() {
-    document.querySelector('.sidebar').style.display = 'flex';
-  }
-  function hideSidebar() {
-    document.querySelector('.sidebar').style.display = 'none';
-  }
+<script> const button = document.getElementById("my-button");
+  const nav = document.getElementById("mynav");
+  
+  button.addEventListener('click', () => {
+    nav.classList.toggle('show');
+  });
   </script>
     </body>
 </html>
